# Hy-MT-Finetune

./: .gitignore  README.md  pyproject.toml
scripts/: mix_translation_data.py  run_inference.py  run_openai.py
train/: download_model.sh  grpo.py  merge_lora_weight.py  run_server.sh  single_gpu_finetune.sh  train_dense.py  train_dense.sh  train_dense_lora.sh
