[project]
name = "hy-finetune"
version = "0.1.0"
description = "Minimal Hy-MT 1.5 and Hy-MT2 fine-tuning setup."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=5.6.0",
    "datasets>=4.4.0",
    "torch>=2.10.0,<2.12",
    "torchvision",
    "torchaudio",
    "accelerate>=1.11.0",
    "peft>=0.18.1",
    "sentencepiece",
    "protobuf",
    "wandb",
    "python-dotenv",
]

[project.optional-dependencies]
deepspeed = [
    "deepspeed>=0.18.7",
    "ninja",
]
flash = [
    "flash-attn",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]
torchaudio = [
    { index = "pytorch-cu128" },
]
